# filestorage

./: AGENTS.md  Cargo.toml  README.md
crates/filestorage/: Cargo.toml
crates/filestorage-core/: Cargo.toml
crates/filestorage-core/benches/: storage_bench.rs
crates/filestorage-core/src/: lib.rs
crates/filestorage-core/tests/: greet.rs  storage.rs
crates/filestorage/src/: main.rs
docs/: architecture.md  complexity_analysis.md  performance_report.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
scripts/: dev_aliases.sh
tests/perf/: Cargo.toml
tests/perf/src/: http_perf.rs  lib.rs  storage_perf.rs
tests/smoke/: Cargo.toml
tests/smoke/src/: lib.rs
