[workspace]
members = [
    "crates/filestorage",
    "crates/filestorage-core",
    "examples/basic",
    "tests/smoke",
    "tests/perf",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
filestorage-core = { path = "crates/filestorage-core" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.39", features = ["full"] }
thiserror = "1.0"
