[package]
name = "perf"
version.workspace = true
edition.workspace = true

[dependencies]
filestorage-core.workspace = true
axum.workspace = true
tokio.workspace = true
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
